# quant-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: algo_notes.md
docs/csi300/: 2024-09-24~至今.md  regime_threshold_research.md
docs/datasets/: etf_universe.md  exchange_hkex_southbound_flow.md  fund_flow.md  fund_hs300_correlation.md  fund_quote_history.md  fund_shares_history.md  gov_stat_freight.md  gov_stat_passenger.md  gov_stat_port_freight.md  gov_stat_retail_sales.md  (+20 more)
plots/: ah_listing_bottom_runup.md  ah_listing_bottom_runup.py  ah_listing_runup.md  ah_listing_runup.py  annual_volatility.md  annual_volatility.py  boll_breakout_forward_return.md  boll_breakout_forward_return.py  boll_lower_breakout_grid.md  boll_lower_breakout_grid.py  channel_backtest.py  channel_entries_on_hs300.md  channel_entries_on_hs300.py  channel_entry_signals.md  channel_entry_signals.py  conditional_forward_return.md  conditional_forward_return.py  dd_reversion_backtest.py  drawdown.md  drawdown.py  drawdown_extremes_vs_hs300.md  drawdown_extremes_vs_hs300.py  freight_vs_hs300.md  freight_vs_hs300.py  fund_drawdown.py  fund_pair_compare.md  fund_pair_compare.py  hs300_turnover_share.md  hs300_turnover_share.py  index_turnover_river.md  index_turnover_river.py  industry_common.py  industry_heatmap.md  industry_heatmap.py  industry_profit_ttm.md  industry_profit_ttm.py  industry_spectrum.py  industry_turnover_stack.md  industry_turnover_stack.py  loans_m2_12m_flow_vs_hs300.md  (+70 more)
quant/: __init__.py  cli.py  convert.py  filter.py  pipeline.py  signals.py  strategy.py  tags.py
(+9 files in other folders)
