[project]
name = "quant"
version = "0.1.0"
description = "命令行量化工具"
requires-python = ">=3.10"
dependencies = [
    "polars>=0.20.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "matplotlib>=3.10.9",
    "python-calamine>=0.3.0",
    "squarify>=0.4.0",
]

[project.scripts]
quant-cli = "quant.cli:cli"

[build-backend]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"

[dependency-groups]
dev = []
